# paper_nutritional_composition_wildmeat

./: 01_data_preparation.ipynb  01_prepare_data.ipynb  02_data_imputation.ipynb  02_impute_data.ipynb  LICENSE  README.md  helpers.py  pyproject.toml  wildmeat.R
data/: 01_cleaned.parquet  01_order_to_impute.json  Thales_Planilha_Geral_MJ_JM_15_07 (2) (1).csv  final_imputation_metrics_summary.xlsx  imputation_metrics.csv  imputed_data.csv  imputed_data_highlighted.xlsx  imputed_values.csv  input_data.csv  input_data_processed.csv  metrics_results.csv  summary_statistics.xlsx  summary_statistics_overall_imputed.xlsx  summary_statistics_per_class.xlsx  summary_statistics_per_class_and_part.xlsx  summary_statistics_per_class_and_part_imputed.xlsx  summary_statistics_per_class_imputed.xlsx  summary_statistics_per_part.xlsx  summary_statistics_per_part_imputed.xlsx
