[project]
name = "paper-nutritional-composition-wildmeat"
version = "0.1.0"
description = "Variation in Nutritional Composition of Anatomical Parts and Taxonomic Classes of Wild Animals: A Systematic Review Using Data Imputation with Artificial Intelligence Resources"
authors = [
    {name = "Elias Jacob",email = "elias.jacob@ufrn.br"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "fancyimpute (>=0.7.0,<0.8.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "jax (>=0.6.0,<0.7.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "ruff (>=0.11.10,<0.12.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "plotly (>=6.1.1,<7.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
